[package]
name = "nexus-rti-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
